fix: remove svg brightness filter in dark mode

--- a/theme-chalk/theme.scss
+++ b/theme-chalk/theme.scss
@@ -5,8 +5,4 @@
   img {
     filter: $image-bright-dark;
   }
-  
-  svg {
-    filter: $image-bright-dark;
-  }
 }
